syntax = "proto3";
package proto.djtool;

enum Service {
  SPOTIFY = 0;
  SOUNDCLOUD = 1;
  YOUTUBE = 2;
}

message UserId {
  string id = 1;
  Service source = 10;
}

message TrackId {
  string id = 1;
  PlaylistId playlist_id = 2;
  Service source = 10;
}

message PlaylistId {
  string id = 1;
  Service source = 10;
}

message SpotifyUserLoginCallbackPkce {
  string code = 1;
  string state = 2;
}

message SpotifyUserLoginCallback {
  oneof method {
    SpotifyUserLoginCallbackPkce pkce = 1;
  }
}

message UserLoginCallback {
  oneof login {
    SpotifyUserLoginCallback spotify_login = 1;
  }
}

message Artwork {
  string url = 1;
  uint32 width = 2;
  uint32 height = 3;
}

message TrackPreview {
  string url = 1;
}

message SpotifyTrack {}

message YoutubeTrack {}

message Track {
  TrackId id = 1;
  string name = 100;
  string artist = 101;
  uint64 duration_millis = 102;
  Artwork artwork = 200;
  TrackPreview preview = 201;

  oneof info {
    SpotifyTrack spotify_track = 301;
    YoutubeTrack youtube_track = 302;
  }
}

message Playlist {
  PlaylistId id = 1;
  string name = 2;
  uint32 total = 3;
  repeated Track tracks = 100;
}

message TrackSyncDesc {
  string id = 1;
  string source = 2;
  string sink = 3;
}

message PlaylistSyncDesc {
  string id = 1;
  string source = 2;
  string sink = 3;
}
